--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ hyper = { version = "1.1.0", features = ["full"], optional = true }
 serde_json = { version = "1.0.111", optional = true }
 hyper-tls = {version = "0.6.0", optional = true }
 futures-util = {version = "0.3.21", optional = true }
-rocksdb = "0.21.0"
+redis = "0.24.0"
 
 [features]
 full = ["enable-hyper", "enable-tungstenite", "enable-ureq", "enable-tokio-tungstenite"]
